-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 12
-
Component/s: hotspot
-
b18
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8231842 | 11.0.6-oracle | Ioi Lam | P2 | Closed | Fixed | b01 |
| JDK-8212991 | 11.0.4 | Ioi Lam | P2 | Resolved | Fixed | b01 |
Test gc/arguments/TestUseCompressedOopsErgo.java#id0 fails intermittently on windows with
# after -XX: or in .hotspotrc: SuppressErrorAt=t:/workspace/open/src/hotspot/share/oops/klassVtable.cpp:1049
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (t:/workspace/open/src/hotspot/share/oops/klassVtable.cpp:1049), pid=20268, tid=8588
# assert(_method == m) failed: sanity
#
# JRE version: (12.0+15) (fastdebug build )
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 12-ea+15, mixed mode, tiered, compressed oops, parallel gc, windows-amd64)
# Core dump will be written. Default location: T:\\testoutput\\jtreg\\JTwork\\scratch\\2\\hs_err_pid20268.mdmp
#
# An error report file with more information is saved as:
# T:\\testoutput\\jtreg\\JTwork\\scratch\\2\\hs_err_pid20268.log
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
# after -XX: or in .hotspotrc: SuppressErrorAt=t:/workspace/open/src/hotspot/share/oops/klassVtable.cpp:1049
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (t:/workspace/open/src/hotspot/share/oops/klassVtable.cpp:1049), pid=20268, tid=8588
# assert(_method == m) failed: sanity
#
# JRE version: (12.0+15) (fastdebug build )
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 12-ea+15, mixed mode, tiered, compressed oops, parallel gc, windows-amd64)
# Core dump will be written. Default location: T:\\testoutput\\jtreg\\JTwork\\scratch\\2\\hs_err_pid20268.mdmp
#
# An error report file with more information is saved as:
# T:\\testoutput\\jtreg\\JTwork\\scratch\\2\\hs_err_pid20268.log
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
- backported by
-
JDK-8212991 VM asserts after CDS archive has been unmapped
-
- Resolved
-
-
JDK-8231842 VM asserts after CDS archive has been unmapped
-
- Closed
-
- relates to
-
JDK-8178351 Simplify MetaspaceShared::is_in_shared_space and MetaspaceObj::is_shared
-
- Closed
-