8212205: VM asserts after CDS archive has been unmapped

Reviewed-by: dholmes, jiangli, hseigel, stuefe